samples/_failures_safe/1761515759_a01f68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77b4f675.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_77b4f675.c:130:5: error: expected expression at end of input
  130 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_77b4f675.c:130:5: error: expected declaration or statement at end of input
